--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,120 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+
+*{
+  box-sizing: border-box;
 }
+
+html{
+  font-family: 'Times New Roman', Times, serif;
+}
+
+body{
+  margin: 0;
+  background-color: #ccddff;
+}
+
+h2{
+  color: blue;
+  text-align: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+font-size: medium;
+}
+
+.app{
+  text-align: center;
+}
+
+.container{
+background-color: rgb(7,2,21 );
+justify-content: center;
+width: 50%;
+margin-left: 26%;
+margin-top: 5%;
+text-align: center;
+padding: 20px;
+}
+
+.header{
+
+width: 100%;
+padding: 12px 20px;
+color: white;
+font-size: 50px;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
+
+
+input[type=text],select{
+
+width: 80%;
+padding: 12px 20px;
+margin: 30px 0;
+display: inline-block;
+border: 1px solid #ccc;
+border-radius: 4px;
+box-sizing: border-box;
+
+}
+
+button{
+
+  width: 15%;
+  background-color: 4CAF50;
+  color: black;
+  padding: 14px 20px;
+  margin: 8px 0;
+border: none;
+border-radius: 4px;
+cursor: pointer;
+font-weight: bold;
+
+}
+
+
+button:hover{
+  background-color: #45a049;
+}
+
+.List-heading{
+  color: rgb(15,14,14);
+  font-size: 50px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+text-align: center;
+background-color:#ccddff;
+width: 60%;
+
+}
+
+
+.listData{
+  color: black;
+  font-size: 20px;
+  background-color: rgb(163,203,237);
+  text-align: center;
+  padding-left: 30px;
+  width: 100px;
+  height: 30px;
+  
+  padding-bottom: 2%;
+  padding-top: 2%;
+  border-radius: 10px;
+
+}
+
+.btn-position{
+  position: relative;
+  left: 11%;
+  top:-54px
+}
+
+
+
+
+
+
+
